Moved external api url to .env and add integration with air
