# docs/swagger.json
@@ -4,7 +4,7 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "API for getting song lyrics with translation",
+        "description": "API for getting song track with translation",
         "title": "Lyrics Library API",
         "contact": {},
         "version": "1.0"
@@ -12,13 +12,13 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/lyrics": {
+        "/track": {
             "get": {
-                "description": "If 'title' is provided, returns lyrics for the specific song.\nOtherwise, returns a list of all songs by the artist (without lyrics).",
+                "description": "If 'title' is provided, returns track for the specific song.\nOtherwise, returns a list of all songs by the artist (without track).",
                 "tags": [
-                    "lyrics"
+                    "track"
                 ],
-                "summary": "Get song lyrics or artist tracks",
+                "summary": "Get song track or artist tracks",
                 "parameters": [
                     {
                         "type": "string",
@@ -40,17 +40,11 @@
                     "200": {
                         "description": "Returns song (object) or artist tracks (array)",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/dto.TrackResponse"
                         }
                     },
                     "400": {
-                        "description": "Artist is required",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Artist/track not found",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -64,7 +58,7 @@
                 }
             },
             "post": {
-                "description": "Saves lyrics and translation for a given artist and song title",
+                "description": "Saves track and translation for a given artist and song title",
                 "consumes": [
                     "application/json"
                 ],
@@ -72,9 +66,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "lyrics"
+                    "track"
                 ],
-                "summary": "Save new lyrics with translation",
+                "summary": "Save new track with translation",
                 "parameters": [
                     {
                         "description": "Lyrics request data",
@@ -82,25 +76,19 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/save.Request"
+                            "$ref": "#/definitions/dto.CreateRequest"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Successfully saved lyrics",
+                        "description": "Successfully saved track",
                         "schema": {
                             "$ref": "#/definitions/dto.TrackResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid request data",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Lyrics not found",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -114,13 +102,13 @@
                 }
             }
         },
-        "/lyrics/{uuid}": {
+        "/track/{uuid}": {
             "delete": {
-                "description": "Delete song lyrics by uuid",
+                "description": "Delete song track by uuid",
                 "tags": [
-                    "lyrics"
+                    "track"
                 ],
-                "summary": "Delete song lyrics",
+                "summary": "Delete song track",
                 "parameters": [
                     {
                         "type": "string",
@@ -136,7 +124,7 @@
                         "description": "Track deleted successfully"
                     },
                     "400": {
-                        "description": "When UUID is missing or invalid",
+                        "description": "Invalid request",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -152,6 +140,23 @@
         }
     },
     "definitions": {
+        "dto.CreateRequest": {
+            "type": "object",
+            "required": [
+                "artist",
+                "title"
+            ],
+            "properties": {
+                "artist": {
+                    "type": "string",
+                    "example": "Juice WRLD"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Lucid Dreams"
+                }
+            }
+        },
         "dto.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -188,23 +193,6 @@
                     "example": [
                         "Я все еще вижу твои тени в моей комнате..."
                     ]
-                }
-            }
-        },
-        "save.Request": {
-            "type": "object",
-            "required": [
-                "artist",
-                "title"
-            ],
-            "properties": {
-                "artist": {
-                    "type": "string",
-                    "example": "Juice WRLD"
-                },
-                "title": {
-                    "type": "string",
-                    "example": "Legends"
                 }
             }
         }
