# internal/transport/dto/response.go
@@ -9,7 +9,7 @@ type ErrorResponse struct {
 type TrackResponse struct {
 	Artist      string   `json:"artist" example:"Lucid Dreams"`
 	Title       string   `json:"title" example:"Juice WRLD"`
-	Lyrics      []string `json:"track" example:"I still see your shadows in my room..."`
+	Lyrics      []string `json:"lyrics" example:"I still see your shadows in my room..."`
 	Translation []string `json:"translation" example:"Я все еще вижу твои тени в моей комнате..."`
 }
 
